--- a/practicas_profesionalizantes/ml_training/training_spam.ipynb
+++ b/practicas_profesionalizantes/ml_training/training_spam.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "id": "88caad36-e4d6-46ce-924e-9ef9b17ca462",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "2172bfd4-44d7-40f1-b19d-b8b43c71f9ee",
    "metadata": {},
    "outputs": [],
@@ -52,10 +52,223 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
+   "id": "3f55ea3e-e415-4925-8321-ade4245b4a0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<details>\n",
+       "<summary>Click to view session information</summary>\n",
+       "<pre>\n",
+       "-----\n",
+       "joblib              1.1.0\n",
+       "matplotlib          3.5.2\n",
+       "numpy               1.21.5\n",
+       "pandas              1.4.4\n",
+       "scipy               1.9.1\n",
+       "seaborn             0.11.2\n",
+       "session_info        1.0.0\n",
+       "sklearn             1.0.2\n",
+       "-----\n",
+       "</pre>\n",
+       "<details>\n",
+       "<summary>Click to view modules imported as dependencies</summary>\n",
+       "<pre>\n",
+       "PIL                         9.2.0\n",
+       "PyObjCTools                 NA\n",
+       "appnope                     0.1.2\n",
+       "backcall                    0.2.0\n",
+       "beta_ufunc                  NA\n",
+       "binom_ufunc                 NA\n",
+       "bottleneck                  1.3.5\n",
+       "cffi                        1.15.1\n",
+       "colorama                    0.4.5\n",
+       "cycler                      0.10.0\n",
+       "cython_runtime              NA\n",
+       "dateutil                    2.8.2\n",
+       "debugpy                     1.5.1\n",
+       "decorator                   5.1.1\n",
+       "defusedxml                  0.7.1\n",
+       "entrypoints                 0.4\n",
+       "hypergeom_ufunc             NA\n",
+       "importlib_metadata          NA\n",
+       "ipykernel                   6.15.2\n",
+       "ipython_genutils            0.2.0\n",
+       "ipywidgets                  7.6.5\n",
+       "jedi                        0.18.1\n",
+       "jupyter_server              1.18.1\n",
+       "kiwisolver                  1.4.2\n",
+       "lz4                         3.1.3\n",
+       "matplotlib_inline           0.1.6\n",
+       "mkl                         2.4.0\n",
+       "mpl_toolkits                NA\n",
+       "nbinom_ufunc                NA\n",
+       "ncf_ufunc                   NA\n",
+       "numexpr                     2.8.3\n",
+       "packaging                   21.3\n",
+       "parso                       0.8.3\n",
+       "pexpect                     4.8.0\n",
+       "pickleshare                 0.7.5\n",
+       "pkg_resources               NA\n",
+       "prompt_toolkit              3.0.20\n",
+       "psutil                      5.9.0\n",
+       "ptyprocess                  0.7.0\n",
+       "pydev_ipython               NA\n",
+       "pydevconsole                NA\n",
+       "pydevd                      2.6.0\n",
+       "pydevd_concurrency_analyser NA\n",
+       "pydevd_file_utils           NA\n",
+       "pydevd_plugins              NA\n",
+       "pydevd_tracing              NA\n",
+       "pygments                    2.11.2\n",
+       "pyparsing                   3.0.9\n",
+       "pytz                        2022.1\n",
+       "setuptools                  63.4.1\n",
+       "six                         1.16.0\n",
+       "sphinxcontrib               NA\n",
+       "statsmodels                 0.13.2\n",
+       "storemagic                  NA\n",
+       "threadpoolctl               2.2.0\n",
+       "tornado                     6.1\n",
+       "traitlets                   5.1.1\n",
+       "typing_extensions           NA\n",
+       "wcwidth                     0.2.5\n",
+       "zipp                        NA\n",
+       "zmq                         23.2.0\n",
+       "zope                        NA\n",
+       "</pre>\n",
+       "</details> <!-- seems like this ends pre, so might as well be explicit -->\n",
+       "<pre>\n",
+       "-----\n",
+       "IPython             7.31.1\n",
+       "jupyter_client      7.3.4\n",
+       "jupyter_core        4.11.1\n",
+       "jupyterlab          3.4.4\n",
+       "notebook            6.4.12\n",
+       "-----\n",
+       "Python 3.9.13 (main, Aug 25 2022, 18:29:29) [Clang 12.0.0 ]\n",
+       "macOS-10.16-x86_64-i386-64bit\n",
+       "-----\n",
+       "Session information updated at 2023-05-15 20:35\n",
+       "</pre>\n",
+       "</details>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import session_info\n",
+    "session_info.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "5fbb2827-4006-4c90-be66-4e88ec2640e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>class</th>\n",
+       "      <th>message</th>\n",
+       "      <th>Unnamed: 2</th>\n",
+       "      <th>Unnamed: 3</th>\n",
+       "      <th>Unnamed: 4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Go until jurong point, crazy.. Available only ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Ok lar... Joking wif u oni...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>spam</td>\n",
+       "      <td>Free entry in 2 a wkly comp to win FA Cup fina...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>U dun say so early hor... U c already then say...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Nah I don't think he goes to usf, he lives aro...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  class                                            message Unnamed: 2  \\\n",
+       "0   ham  Go until jurong point, crazy.. Available only ...        NaN   \n",
+       "1   ham                      Ok lar... Joking wif u oni...        NaN   \n",
+       "2  spam  Free entry in 2 a wkly comp to win FA Cup fina...        NaN   \n",
+       "3   ham  U dun say so early hor... U c already then say...        NaN   \n",
+       "4   ham  Nah I don't think he goes to usf, he lives aro...        NaN   \n",
+       "\n",
+       "  Unnamed: 3 Unnamed: 4  \n",
+       "0        NaN        NaN  \n",
+       "1        NaN        NaN  \n",
+       "2        NaN        NaN  \n",
+       "3        NaN        NaN  \n",
+       "4        NaN        NaN  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data = pd.read_csv(\"https://raw.githubusercontent.com/amankharwal/SMS-Spam-Detection/master/spam.csv\", encoding= 'latin-1')\n",
     "data.head()"
@@ -63,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "c9efaab0-7f2e-4458-8c78-fa67168fc2ff",
    "metadata": {},
    "outputs": [
@@ -92,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "cd6410ad-7d86-4a94-9fbb-bb6faadbbe30",
    "metadata": {},
    "outputs": [
@@ -102,7 +315,7 @@
        "(5572, 2)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "7d8d98e4-3695-455b-bc7e-9bf902ad8a78",
    "metadata": {},
    "outputs": [
@@ -124,7 +337,7 @@
        "MultinomialNB()"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "0c0f061a-d129-493d-a03a-54fb9d10349c",
    "metadata": {},
    "outputs": [
@@ -150,14 +363,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter a message: you have won 40 dolars!\n"
+      "Enter a message: congratulation you have win a car!\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['spam']\n"
+      "['ham']\n"
      ]
     }
    ],
@@ -169,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "284ab43e-f383-4de5-80dd-fe9b32af4916",
    "metadata": {},
    "outputs": [
@@ -206,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "id": "a65570c9-5b44-4067-a641-2e3377e1d6f3",
    "metadata": {},
    "outputs": [
@@ -216,7 +429,7 @@
        "dict_keys(['alpha', 'class_prior', 'fit_prior'])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,30 +441,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f32c78d5-2c31-4b63-b4a4-216bff741362",
+   "id": "b64e6a14-6fd9-4a41-ae86-d161d43f4975",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 20,
    "id": "72c674f6-d619-40aa-b424-d7cad756a12b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['spam_clf_v1.pkl']"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "joblib.dump(clf, 'spam_clf_v1.pkl')"
+    "#joblib.dump(clf, 'spam_clf_v1.pkl')"
    ]
   }
  ],
