--- a/practicas_profesionalizantes/ml_training/training_spam.ipynb
+++ b/practicas_profesionalizantes/ml_training/training_spam.ipynb
@@ -34,6 +34,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "b01105ef-0c66-4d23-babc-0b9b3981e68a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.9.13\n"
+     ]
+    }
+   ],
+   "source": [
+    "import platform\n",
+    "print(platform.python_version())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "id": "2172bfd4-44d7-40f1-b19d-b8b43c71f9ee",
    "metadata": {},
